September 19th, 2018:
mysqlmymonlite.sh v0.5.6 / v0.5.6 WHM / v0.5.6 Debian
* improved nginx.conf detection
* whm compatibility fix

May 3rd, 2017:
mysqlmymonlite.sh v0.5.5 / v0.5.5 WHM / v0.5.5 Debian
* Update nginx.conf settings inspection/display
* Update mysqltuner.pl 1.7.1

August 26th, 2015:
mysqlmymonlite.sh v0.5.4 / v0.5.4 WHM / v0.5.4 Debian
* update for defaults-extra-file support for mysql 5.6 & mysqltuner.pl 1.5.1 with MariaDB 10 and Aria Engine support

March 4th, 2015:
mysqlmymonlite.sh v0.5.3 / v0.5.3 WHM / v0.5.3 Debian
* fix mysqltuner --forcemem prompt when root password set

January 21st, 2014:
mysqlmymonlite.sh v0.5.2 / v0.5.2 WHM / v0.5.2 Debian
* Added WEBONLY variable option - for non-MySQL servers (i.e. remote MySQL setups)
* Added smem stats output to memory info function http://www.selenic.com/smem/
* Updated PHP Info output to detect Zend Opcode cache settings

September 6th, 2013:
mysqlmymonlite.sh v0.5.1 / v0.5.1 WHM / v0.5.1 Debian
* Updated WHM version perlmod script alternative location

August 8th, 2013:
mysqlmymonlite.sh v0.5.0 / v0.5.0 WHM / v0.5.0 Debian
* Updated WHM version with perl DBD::mysql check

August 4th, 2013:
mysqlmymonlite.sh v0.4.9 / v0.4.9 WHM / v0.4.9 Debian
* Minor code cleanup and revisions

May 13th, 2013:
mysqlmymonlite.sh v0.4.8 / v0.4.8 WHM / v0.4.8 Debian
* Updated mysqlmymonlite.sh for OpenLiteSpeed web server support http://vbtechsupport.com/2165/

March 12th, 2013:
mysqlmymonlite.sh v0.4.7 / v0.4.7 WHM / v0.4.7 Debian
* Additional InnoDB Buffer Pool Stats from MySQL 5.5 Information Schema tables

February 6th, 2013:
mysqlmymonlite.sh v0.4.6 / v0.4.6 WHM / v0.4.6 Debian
* Additional system process limit display info added

December 9th, 2012:
mysqlmymonlite.sh v0.4.5 / v0.4.5 WHM / v0.4.5 Debian
* Minor change in disk usage command from df -h to df -Th

October 22nd, 2012:
mysqlmymonlite.sh v0.4.4 / v0.4.4 WHM / v0.4.4 Debian
* Improve performance and speed