@@ -4,8 +4,8 @@
 # Lite version of extensive featured mysqlmymon.sh
 # MySQL and system monitoring script 
 # by George Liu (eva2000) vbtechsupport.com
-# Updated: September 19, 2018 AEST 
-MYSQLMYMONVER='0.5.6 WHM'
+# Updated: October 25, 2018 AEST
+MYSQLMYMONVER='0.5.7 WHM'
 MYSQLMYMONURL='mysqlmymon.com'
 #######################################################
 # Usage is free just keep the credits intact
